--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -10,16 +10,24 @@
 <body>
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">LFS scripts</a>
+          <a class="navbar-brand" href="index.html">LFS scripts</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Archivos</a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Abrir</a></li>
+                  <li><a class="dropdown-item" href="#">Guardar</a></li>
+                  <li><a class="dropdown-item" href="#">Guardar como</a></li>
+                  <li><a class="dropdown-item" href="#">Crear</a></li>                 
+                </ul>
+              </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="reportes.html">Reportes</a>
               </li>
-
           </div>
         </div>
       </nav>
